--- a/piapp/package.json
+++ b/piapp/package.json
@@ -9,15 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.3",
-    "atob": "^2.1.2",
-    "canvas": "^2.6.1",
-    "express": "^4.17.1",
-    "ffmpeg-cli": "^2.7.1",
-    "image-js": "^0.31.4",
-    "md5": "^2.3.0",
-    "mysql2": "^2.2.5",
-    "uuid": "^8.3.2"
+    "node-fetch": "^2.6.1",
+    "node-webcam": "^0.8.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.31"
