--- a/piapp/package.json
+++ b/piapp/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "image-js": "^0.31.4",
     "node-fetch": "^2.6.1",
+    "node-raspistill": "^1.0.3",
     "node-webcam": "^0.8.0"
   },
   "devDependencies": {
