--- a/webapp/package.json
+++ b/webapp/package.json
@@ -11,11 +11,14 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "@types/suncalc": "^1.8.0",
+    "canvas": "^2.7.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "suncalc": "^1.8.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
