--- a/piapp/package.json
+++ b/piapp/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.11",
     "canvas": "^2.7.0",
+    "express": "^4.17.1",
     "image-js": "^0.31.4",
     "node-fetch": "^2.6.1",
     "node-raspistill": "^1.0.3",
